# aicert

./: .gitignore  .readthedocs.yaml  AIBom_format.md  Earthfile  README.md  README_dev.md  REDME_dev.md  aicert_dev.code-workspace  boot.sh  create_MithrilOS.sh  export_image_ids.sh  mkdocs.yml  setup-tpm.sh  upload.sh  upload_config.sh
.devcontainer/: devcontainer.json  script.sh
cli/: pyproject.toml
cli/aicert/: __init__.py
cli/aicert/cli/: __init__.py  aicert_new.yaml  client.py  context.py  logging.py  main.py  verify.py
cli/aicert/cli/deploy/: inventory.ini.tmpl  main.tf  provision.sh
cli/aicert/verifier/: verifier.py
client/: README.md  aicert.yaml  pyproject.toml
client/aicert/cli/: __init__.py  client.py  logging.py  main.py  requests_adapter.py  verify.py
client/aicert/cli/deployment/: __init__.py  daemon.py  deployer.py
client/aicert/cli/deployment/deploy/: ansible.cfg  deploy.yml  main.tf  my-fastapi.service  outputs.tf  variables.tf
client/aicert/cli/security_config/: __init__.py
client/aicert/cli/templates/: aicert.yaml
client/aicert/cli/templates/deploy/: Caddyfile  deploy.yml  my-fastapi.service  provision.sh  variables.tf
client/axolotl_yaml/: aicert.yaml
client/tests/: bom.json  verifier.py
common/: pyproject.toml
common/aicert_common/: __init__.py  config_parser.py  errors.py  protocol.py
control_plane/: README.md  pyproject.toml
control_plane/control_plane/: logging.py  main.py  utils.py
daemon/: README.md  pyproject.toml
daemon/aicert_daemon/: __init__.py  daemon.py  main.py
deploy/: .terraform.lock.hcl  Caddyfile  deploy.yml  main.tf  my-fastapi.service  storage.tf  variables.tf
docs/: index.md
docs/docs/getting-started/: attestation.md  get-started.md  tech-overview.md
docs/pdoc_template/: logo.mako
docs/resources/falcon-example/data/: Dockerfile  dataset_script.py
docs/resources/falcon-example/train/: Dockerfile  train_script.py
docs/stylesheets/: extra.css
mithril-os/mkosi/rootfs/: mkosi.conf.j2  mkosi.postinst
mithril-os/mkosi/rootfs/mkosi.extra/etc/: fstab
mithril-os/mkosi/rootfs/mkosi.extra/etc/iptables/: rules.v4
mithril-os/mkosi/rootfs/mkosi.extra/etc/systemd/system/: azure-provisioning.service  launch-aicert-server.service
mithril-os/mkosi/rootfs/mkosi.extra/var/: Caddyfile  azure-provisioning.py  docker-compose.yml  launch-aicert.sh
mithril-os/mkosi/rootfs/mkosi.repart/: 11-root-verity.conf
scripts/: compute_expected_pcr4.py  generate_expected_measurements_files.py
server/: README.md  README_tests.md  attestation_sample.json  pyproject.toml  qlora_test.yml  tinyllama_test.yaml
server/aicert_server/: Dockerfile  builder.py  cmd_line.py  config_parser.py  deploy_storage.py  event_log.py  log_streamer.py  main.py  pyproject.toml  pytest.ini  sample_build_response.json  test_main.py  test_server.py  tinyllama_test.yaml  tpm.py
server/aicert_server/aicert_server/: builder.py  config_parser.py  deploy_storage.py  event_log.py  log_streamer.py  main.py  requirements.txt  tpm.py
server/aicert_server/base_image/: Dockerfile
server/aicert_server/tests/: conftest.py
server/aicert_server/tests/test_routes/: test_main.py
server/base_image/: Dockerfile
server/server/: main.py  verify.py
