[tool.poetry]
name = "aicert-daemon"
version = "0.1.0"
description = ""
authors = ["Corentin Lauverjat <corentin.lauverjat@mithrilsecurity.io>"]
readme = "README.md"
packages = [{include = "aicert_daemon"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.100.1"
uvicorn = {extras = ["standard"], version = "^0.23.1"}
rich = "^13.4.2"
ansible = "^8.2.0"
requests = "^2.31.0"

aicert-common = { path = "../common" }


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
aicert-daemon = 'aicert_daemon.main:main'
