[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Corentin Lauverjat <corentin.lauverjat@mithrilsecurity.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.100.0"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
python-multipart = "^0.0.6"
docker = "^6.1.3"
tpm2-pytss = "^2.1.0"
pytest = "^7.4.0"
httpx = "^0.24.1"
blackdoc = "^0.3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
