[tool.poetry]
name = "aicert-server"
version = "0.1.0"
description = ""
authors = [
    "Corentin Lauverjat <corentin.lauverjat@mithrilsecurity.io>",
    "Lucas Bourtoule <lucas.bourtoule@mithrilsecurity.io>",
]
readme = "README.md"
packages = [{include = "aicert_server"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.100.0"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
python-multipart = "^0.0.6"
docker = "^6.1.3"
pytest = "^7.4.0"
httpx = "^0.24.1"
blackdoc = "^0.3.8"
requests = "^2.31.0"
cryptography = "^41.0.2"
aicert-common = { path = "../common" }
pydantic = "^2.6.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
aicert-server = 'aicert_server.main:main'
